src/scss/component.scss
/* ... */
#mddtp-date__unset {
  margin-right: 110px;
}

.mddtp-button:hover,
.mddtp-button:focus {
  background-color: $md-button-color--focus;
}
.mddtp-button:active {
  background-color: $md-button-color--active;
}
.mddtp-button:disabled {
  color: $md-button-color--disabled;
  cursor: not-allowed;
}
//date or time component dialog
.mddtp-picker {
  @include shadow-8dp();
  font-family: $regular !important;
  min-width: 5 * 56px;
  max-width: 364px;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate3d(-50%,-50%,0);
  transform-origin: 0 0;
  display: table;
  border-radius: 3px;
  line-height: normal;
  overflow: hidden;
  z-index: 99999;
  .mddtp-picker__header {
    width: 100px;
    background-color: $picker-header-color;
    padding: 24px 24px 20px;
    .mddtp-picker__title {
      color: $color-secondary-text;
      font-family: $regular;
      font-size: 20px;
      font-weight: 700;
    }
    .mddtp-picker__subtitle {
      font-weight: 400;
      font-size: 16px; //TODO 17px on mobile
      line-height: 20px;
    }
    .mddtp-picker__title,
    .mddtp-picker__subtitle {
      color: $color-secondary-text;
      margin: 0;
      cursor: pointer;
    }
    .mddtp-picker__color--active {
      color: $color-primary-text;
    }
  }
  .mddtp-picker__body {
    position: relative;
    background-color: $picker-body-color;

    .mddtp-picker__action {
      padding: 8px 0;
      text-align: right;
    }
  }
  .mddtp-picker__header,
  .mddtp-picker__body {
    display: table-cell;
    vertical-align: top;
    height: 100%;
  }
}
//date component dialog
.mddtp-picker-date {
  .mddtp-picker__left {
    left: 10px;
  }
  .mddtp-picker__right {
    right: 10px;
  }
  .mddtp-picker__left,
  .mddtp-picker__right {
    position: absolute;
    background-repeat: no-repeat;
    background-position: center;
    margin: 0;
    height: 48px;
    width: 48px;
    min-width: 48px;
    top: 4px;
    border-radius: 50%;
    &:hover,
    &:hover,
    &:focus,
    &:focus {
      background-color: $md-button-color--focus;
    }
    &:active,
    &:active {
      background-color: $md-button-color--active;
    }
    &:disabled,
    &:disabled {
      background-repeat: no-repeat;
      background-position: center;
    }
  }
}
/* ... */

